--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -1,5 +1,8 @@
 
 <html>
+<head>
+    <style type="text/css">p { font-family : monospace; }</style>
+</head>
 <body>
 
 
@@ -15,30 +18,30 @@
 <br>
 <br>
 
-<p>   current latitude:         <span></span><br>
+<p> +_current latitude:         <span></span><br>
     -_initial latitude:         <span></span><br>
-      =______________:          <span></span></p>
-<p>   current longitude:        <span></span><br>
+    =_________________:         <span></span></p>
+<p> +_current longitude:        <span></span><br>
     -_initial longitude:        <span></span><br>
-      =_______________:         <span></span></p>
-<p>   current altitude:         <span></span><br>
+    =__________________:        <span></span></p>
+<p> +_current altitude:         <span></span><br>
     -_initial altitude:         <span></span><br>
-      =______________:          <span></span></p>
-<p>   current accuracy:         <span></span><br>
+    =_________________:         <span></span></p>
+<p> +_current accuracy:         <span></span><br>
     -_initial accuracy:         <span></span><br>
-      =______________:          <span></span></p>
-<p>   current altitudeAccuracy: <span></span><br>
+    =_________________:         <span></span></p>
+<p> +_current altitudeAccuracy: <span></span><br>
     -_initial altitudeAccuracy: <span></span><br>
-      =______________________:  <span></span></p>
-<p>   current heading:          <span></span><br>
+    =_________________________: <span></span></p>
+<p> +_current heading:          <span></span><br>
     -_initial heading:          <span></span><br>
-      =_____________:           <span></span></p>
-<p>   current speed:            <span></span><br>
+    =________________:          <span></span></p>
+<p> +_current speed:            <span></span><br>
     -_initial speed:            <span></span><br>
-      =___________:             <span></span></p>
-<p>   current local time:       <span></span><br>
+    =______________:            <span></span></p>
+<p> +_current local time:       <span></span><br>
     -_initial local time:       <span></span><br>
-      =________________:        <span></span></p>
+    =___________________:       <span></span></p>
 
 
 
