--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -57,37 +57,42 @@ function getLocation() {
 
     watchID = navigator.geolocation.watchPosition(
         function(position){
-               spans = document.querySelectorAll('p span');
-               spans[0].textContent = '\xa0' + position.coords.latitude.toFixed(7);
-               spans[3].textContent =  '\xa0' + position.coords.longitude;
-               spans[6].textContent =  '\xa0' + position.coords.altitude;
-               spans[9].textContent =  '\xa0' + position.coords.accuracy;
-               spans[12].textContent = '\xa0' +  position.coords.altitudeAccuracy;
-               spans[15].textContent = '\xa0' +  position.coords.heading;
-               spans[18].textContent = '\xa0' +  position.coords.speed;
+                spans = document.querySelectorAll('p span');
+                spans[0].textContent = '\xa0' + position.coords.latitude.toFixed(7);
+                spans[3].textContent =  '\xa0' + position.coords.longitude;
+                spans[6].textContent =  '\xa0' + position.coords.altitude;
+                spans[9].textContent =  '\xa0' + position.coords.accuracy;
+                spans[12].textContent = '\xa0' +  position.coords.altitudeAccuracy;
+                spans[15].textContent = '\xa0' +  position.coords.heading;
+                spans[18].textContent = '\xa0' +  position.coords.speed;
 
-               now = new Date(position.timestamp);
-               spans[21].textContent = now.toLocaleTimeString();
+                now = new Date(position.timestamp);
+                spans[21].textContent = now.toLocaleTimeString();
 
-               spans[2].textContent = (spans[0].textContent - spans[1].textContent).toFixed(7);
-               spans[5].textContent = (spans[3].textContent - spans[4].textContent).toFixed(7);
-               spans[8].textContent = (spans[6].textContent - spans[7].textContent).toFixed(7);
-               spans[11].textContent = (spans[9].textContent - spans[10].textContent).toFixed(7);
-               spans[14].textContent = (spans[12].textContent - spans[13].textContent).toFixed(7);
-               spans[17].textContent = (spans[15].textContent - spans[16].textContent).toFixed(7);
-               spans[20].textContent = (spans[18].textContent - spans[19].textContent).toFixed(7);
+                len = spans[0].textContent.length;
+                lendiff = (spans[0].textContent - spans[1].textContent).toFixed(7).toString().length;
+                //spans[2].textContent = lendiff;
+                spans[2].textContent
+                = ('\xa0\xa0\xa0' + (spans[0].textContent - spans[1].textContent).toFixed(7)).substring((-8+lendiff));
 
-               fullSeconds = Math.floor(now/1000.0) - Math.floor(initTime/1000.0);
-               var paddingZero = function(n) {
-                    return (n < 10) ? '\xa0' + n : n;
-               };
-               hour = Math.floor(fullSeconds / 3600);
-               minute = Math.floor(fullSeconds % 3600 / 60);
-               second = Math.floor(fullSeconds % 60);
-               hour= paddingZero(hour);
-               minute= paddingZero(minute);
-               second = paddingZero(second);
-               spans[23].textContent =hour + ':' + minute + ':' + second;
+                spans[5].textContent = (spans[3].textContent - spans[4].textContent).toFixed(7);
+                spans[8].textContent = (spans[6].textContent - spans[7].textContent).toFixed(7);
+                spans[11].textContent = (spans[9].textContent - spans[10].textContent).toFixed(7);
+                spans[14].textContent = (spans[12].textContent - spans[13].textContent).toFixed(7);
+                spans[17].textContent = (spans[15].textContent - spans[16].textContent).toFixed(7);
+                spans[20].textContent = (spans[18].textContent - spans[19].textContent).toFixed(7);
+
+                fullSeconds = Math.floor(now/1000.0) - Math.floor(initTime/1000.0);
+                var paddingZero = function(n) {
+                     return (n < 10) ? '\xa0' + n : n;
+                };
+                hour = Math.floor(fullSeconds / 3600);
+                minute = Math.floor(fullSeconds % 3600 / 60);
+                second = Math.floor(fullSeconds % 60);
+                hour= paddingZero(hour);
+                minute= paddingZero(minute);
+                second = paddingZero(second);
+                spans[23].textContent =hour + ':' + minute + ':' + second;
 
         },null);
   } else {
