--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -50,6 +50,7 @@
       -_initial latitude:         <span></span><br>
       =_________________:         <span></span></p>
 
+      <p id="list"></p>
     </div>
 
     <script>
@@ -106,6 +107,21 @@
                                       lendiff = (latitude[0].textContent - latitude[1].textContent).toFixed(7).toString().length;
                                       latitude[2].textContent
                                         = ('\xa0\xa0\xa0' + (spans[0].textContent - spans[1].textContent).toFixed(7)).substring((-8+lendiff));
+                                      var coords = [ 'latitude', 'longitude' ];
+                                      var list = document.getElementById('list');
+                                      list.textContent = '';
+                                      //var p = document.createElement('p');
+                                      for(var i = 0, arraylen = coords.length; i < arraylen; i++) {
+                                        var coord = coords[i];
+                                        var p = document.createElement('p');
+                                        //var text = document.createTextNode('coord');
+                                        //var text = document.createTextNode(coords[i]);
+                                        var text = document.createTextNode(coord + coord);
+                                        p.appendChild(text);
+                                        list.appendChild(p);
+
+                                      }
+                                      //document.getElementById('list').appendChild('p');
 
                                     },null);
                     } else {
