--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -107,6 +107,8 @@
                                       lendiff = (latitude[0].textContent - latitude[1].textContent).toFixed(7).toString().length;
                                       latitude[2].textContent
                                         = ('\xa0\xa0\xa0' + (spans[0].textContent - spans[1].textContent).toFixed(7)).substring((-8+lendiff));
+
+
                                       var coords = [ 'latitude', 'longitude' ];
                                       var list = document.getElementById('list');
                                       list.textContent = '';
@@ -114,14 +116,21 @@
                                       for(var i = 0, arraylen = coords.length; i < arraylen; i++) {
                                         var coord = coords[i];
                                         var p = document.createElement('p');
-                                        //var text = document.createTextNode('coord');
-                                        //var text = document.createTextNode(coords[i]);
-                                        var text = document.createTextNode(coord + coord);
+
+
+                                        var t = '+_current ' + coord + ': ' + eval('position.coords.' + coord);
+                                        var text = document.createTextNode(t);
+                                        p.appendChild(text);
+
+                                        p.appendChild(document.createElement("br"));
+
+                                        var t = '+_initial ' + coord + ': ' + eval('position.coords.' + coord);
+                                        var text = document.createTextNode(t);
                                         p.appendChild(text);
                                         list.appendChild(p);
 
                                       }
-                                      //document.getElementById('list').appendChild('p');
+
 
                                     },null);
                     } else {
